src/.bnf/syntax.txt
PROGRAM      -> GRAMMAR
GRAMMAR      -> LINE | LINE "\n+" GRAMMAR
LINE         -> REQUIRE | PRODUCTION
REQUIRE      -> "#require" NAME | "#require" NAME "as" NAME
NAME         -> "\w+(\.\w+)*"
PRODUCTION   -> RULE "->" ALTERNATIVES
RULE         -> NONTERMINAL
ALTERNATIVES -> PATTERN | PATTERN "\|" ALTERNATIVES
PATTERN      -> TERM | TERM PATTERN
TERM         -> TERMINAL | NONTERMINAL
NONTERMINAL  -> "\w+(\.\w+)*"
TERMINAL     -> "\"\S+\"" | "\"\""
