new/compiler/parserdata.py
'''!!! THIS FILE IS AUTOMATICALLY GENERATED - PLEASE DO NOT MODIFY !!!'''



from datatypes import Rule, EOI



##### ABSTRACT SYNTAX TREE #####



class START(Rule):
    r'''```
START -> PROGRAM
    ```'''

class PROGRAM(Rule):
    r'''```
PROGRAM -> GRAMMAR
    ```'''

class GRAMMAR(Rule):
    r'''```
GRAMMAR -> LINE
         | LINE "\n+" GRAMMAR
    ```'''

class LINE(Rule):
    r'''```
LINE -> REQUIRE
      | PRODUCTION
    ```'''

class REQUIRE(Rule):
    r'''```
REQUIRE -> "#require\s+\w+(\.\w+)*"
    ```'''

class PRODUCTION(Rule):
    r'''```
PRODUCTION -> RULE "->" ALTERNATIVES
    ```'''

class RULE(Rule):
    r'''```
RULE -> NONTERMINAL
    ```'''

class ALTERNATIVES(Rule):
    r'''```
ALTERNATIVES -> PATTERN
              | PATTERN "\|" ALTERNATIVES
    ```'''

class PATTERN(Rule):
    r'''```
PATTERN -> TERM
         | TERM PATTERN
    ```'''

class TERM(Rule):
    r'''```
TERM -> TERMINAL
      | NONTERMINAL
    ```'''

class NONTERMINAL(Rule):
    r'''```
NONTERMINAL -> "[_a-zA-Z]\w*"
    ```'''

class TERMINAL(Rule):
    r'''```
TERMINAL -> "\"\S+\""
    ```'''


terminals = {
    r"\n+",
    r"->",
    r"#require\s+\w+(\.\w+)*",
    r"\|",
    r"[_a-zA-Z]\w*",
    r"\"\S+\""
}



##### PARSETABLE #####



# ---{ GRAMMAR }---
# Rule 0    START -> PROGRAM
# Rule 1    PROGRAM -> GRAMMAR
# Rule 2    GRAMMAR -> LINE
# Rule 3    GRAMMAR -> LINE "\n+" GRAMMAR
# Rule 4    LINE -> REQUIRE
# Rule 5    LINE -> PRODUCTION
# Rule 6    REQUIRE -> "#require\s+\w+(\.\w+)*"
# Rule 7    PRODUCTION -> RULE "->" ALTERNATIVES
# Rule 8    RULE -> NONTERMINAL
# Rule 9    ALTERNATIVES -> PATTERN
# Rule 10   ALTERNATIVES -> PATTERN "\|" ALTERNATIVES
# Rule 11   PATTERN -> TERM
# Rule 12   PATTERN -> TERM PATTERN
# Rule 13   TERM -> TERMINAL
# Rule 14   TERM -> NONTERMINAL
# Rule 15   NONTERMINAL -> "[_a-zA-Z]\w*"
# Rule 16   TERMINAL -> "\"\S+\""


    
# Parsetable constructed with 22 states.
# No conflicts found.



rules = (
    (START, 'main', 0, 1),
    (PROGRAM, 'main', 0, 1),
    (GRAMMAR, 'main', 0, 1),
    (GRAMMAR, 'main', 1, 3),
    (LINE, 'main', 0, 1),
    (LINE, 'main', 1, 1),
    (REQUIRE, 'main', 0, 1),
    (PRODUCTION, 'main', 0, 3),
    (RULE, 'main', 0, 1),
    (ALTERNATIVES, 'main', 0, 1),
    (ALTERNATIVES, 'main', 1, 3),
    (PATTERN, 'main', 0, 1),
    (PATTERN, 'main', 1, 2),
    (TERM, 'main', 0, 1),
    (TERM, 'main', 1, 1),
    (NONTERMINAL, 'main', 0, 1),
    (TERMINAL, 'main', 0, 1)
)



table = {
    0 : {
        PROGRAM : [('G', 1)],
        GRAMMAR : [('G', 2)],
        LINE : [('G', 3)],
        PRODUCTION : [('G', 6)],
        RULE : [('G', 7)],
        NONTERMINAL : [('G', 19)],
        r"[_a-zA-Z]\w*" : [('S', 16)],
        REQUIRE : [('G', 20)],
        r"#require\s+\w+(\.\w+)*" : [('S', 21)]
    },
    1 : {
        EOI : [('A', True)]
    },
    2 : {
        EOI : [('R', 1)]
    },
    3 : {
        EOI : [('R', 2)],
        r"\n+" : [('S', 4)]
    },
    4 : {
        GRAMMAR : [('G', 5)],
        LINE : [('G', 3)],
        PRODUCTION : [('G', 6)],
        RULE : [('G', 7)],
        NONTERMINAL : [('G', 19)],
        r"[_a-zA-Z]\w*" : [('S', 16)],
        REQUIRE : [('G', 20)],
        r"#require\s+\w+(\.\w+)*" : [('S', 21)]
    },
    5 : {
        EOI : [('R', 3)]
    },
    6 : {
        r"\n+" : [('R', 5)],
        EOI : [('R', 5)]
    },
    7 : {
        r"->" : [('S', 8)]
    },
    8 : {
        ALTERNATIVES : [('G', 9)],
        PATTERN : [('G', 10)],
        TERM : [('G', 13)],
        NONTERMINAL : [('G', 15)],
        r"[_a-zA-Z]\w*" : [('S', 16)],
        TERMINAL : [('G', 17)],
        r"\"\S+\"" : [('S', 18)]
    },
    9 : {
        r"\n+" : [('R', 7)],
        EOI : [('R', 7)]
    },
    10 : {
        r"\n+" : [('R', 9)],
        EOI : [('R', 9)],
        r"\|" : [('S', 11)]
    },
    11 : {
        ALTERNATIVES : [('G', 12)],
        PATTERN : [('G', 10)],
        TERM : [('G', 13)],
        NONTERMINAL : [('G', 15)],
        r"[_a-zA-Z]\w*" : [('S', 16)],
        TERMINAL : [('G', 17)],
        r"\"\S+\"" : [('S', 18)]
    },
    12 : {
        r"\n+" : [('R', 10)],
        EOI : [('R', 10)]
    },
    13 : {
        r"\n+" : [('R', 11)],
        r"\|" : [('R', 11)],
        EOI : [('R', 11)],
        PATTERN : [('G', 14)],
        TERM : [('G', 13)],
        NONTERMINAL : [('G', 15)],
        r"[_a-zA-Z]\w*" : [('S', 16)],
        TERMINAL : [('G', 17)],
        r"\"\S+\"" : [('S', 18)]
    },
    14 : {
        r"\n+" : [('R', 12)],
        r"\|" : [('R', 12)],
        EOI : [('R', 12)]
    },
    15 : {
        r"\n+" : [('R', 14)],
        r"\|" : [('R', 14)],
        EOI : [('R', 14)],
        r"[_a-zA-Z]\w*" : [('R', 14)],
        r"\"\S+\"" : [('R', 14)]
    },
    16 : {
        r"\n+" : [('R', 15)],
        r"->" : [('R', 15)],
        r"\|" : [('R', 15)],
        EOI : [('R', 15)],
        r"[_a-zA-Z]\w*" : [('R', 15)],
        r"\"\S+\"" : [('R', 15)]
    },
    17 : {
        r"\n+" : [('R', 13)],
        r"\|" : [('R', 13)],
        EOI : [('R', 13)],
        r"[_a-zA-Z]\w*" : [('R', 13)],
        r"\"\S+\"" : [('R', 13)]
    },
    18 : {
        r"\n+" : [('R', 16)],
        r"\|" : [('R', 16)],
        EOI : [('R', 16)],
        r"[_a-zA-Z]\w*" : [('R', 16)],
        r"\"\S+\"" : [('R', 16)]
    },
    19 : {
        r"->" : [('R', 8)]
    },
    20 : {
        r"\n+" : [('R', 4)],
        EOI : [('R', 4)]
    },
    21 : {
        r"\n+" : [('R', 6)],
        EOI : [('R', 6)]
    }
}
